# toram-news

./: .gitignore  README.md  pyproject.toml  requirements.txt
toram/: config.py  main.py
toram/database/: mongo_db.py
toram/utils/: __init__.py  http_server.py  scraper.py
